--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,9 @@
   font-family: 'Open Sans', sans-serif;
   padding-top:40px;
 }
+.form-inline{
+  display: flex;
+}
 .container1{
   max-width:400px;
   margin:0 auto;
