--- a/style/style.css
+++ b/style/style.css
@@ -87,3 +87,7 @@ input[type="submit"]:hover{
   cursor:pointer;
   box-shadow:0 10px 15px -5px rgba(0,0,0,0.4);
 }
+#map {
+  height: 400px;
+  width: 770px;
+}
